package org.example.scanresult;

public class SuccessfulScanResult implements ScanResult {
	@Override
	public boolean isSuccessful() {
		return true;
	}
}
