package org.example.token;

public interface TokenType {}
