package lexer.scanresult;

public interface ScanResult {
    boolean isSuccessful();
}
