package model;

public class Token {
    private TokenType type;
    private Integer start;
    private Integer end;
    private String value;
}
